--- a/package.json
+++ b/package.json
@@ -1,32 +1,41 @@
 {
-  "name": "diet-app",
+  "name": "DietApp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "postinstall": "prisma generate",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "apexcharts": "^3.35.3",
-    "next": "12.2.2",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.8.0",
+    "@tanstack/react-query": "^4.20.0",
+    "@trpc/client": "^10.8.1",
+    "@trpc/next": "^10.8.1",
+    "@trpc/react-query": "^10.8.1",
+    "@trpc/server": "^10.8.1",
+    "next": "13.1.1",
+    "next-auth": "^4.18.7",
     "react": "18.2.0",
-    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
-    "react-minimal-pie-chart": "^8.3.0",
-    "sass": "^1.53.0"
+    "superjson": "1.9.1",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@types/node": "18.0.3",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
-    "typescript": "4.7.4"
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.30.0",
+    "eslint-config-next": "13.1.1",
+    "prisma": "^4.8.0",
+    "typescript": "^4.9.4"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.3.1"
   }
 }
